k8s/demo-app/backend/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  sessionAffinity: None
  ports:
    - name: backend
      protocol: TCP
      port: 5000
      targetPort: 5000
