k8s/demo-app/backend/np-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # allow access from ingress
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: d8-ingress-nginx
          podSelector:
            matchLabels:
              app: controller
      ports:
        - protocol: TCP
          port: 5000
    # allow access from healthcheck agent
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: d8-service-with-healthchecks
          podSelector:
            matchLabels:
              app: agent
      ports:
        - protocol: TCP
          port: 5000
  egress:
    # allow access to database
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: demo-db
          podSelector:
            matchLabels:
              app: db
      ports:
        - protocol: TCP
          port: 5432
    # allow access to cluster DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
    # allow access to outside to download packages and app sources
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
